[metadata]
name = pyqtschema
version = attr: pyqtschema.version
author = Amsico
author_email = amsico@eclipso.eu
description = Convert json-schema to QWidgets
long_description = file: README.md, changelog.md
long_description_content_type = text/markdown
url = https://github.com/amsico/pyqtschema
project_urls =
    Bug Tracker = https://github.com/amsico/pyqtschema/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    jsonschema
    qtpy
    PyQt5


[options.packages.find]
where = src
